# rr_neruel

./: .gitignore  CMakeLists.txt  README.md  raspberry-pi.cmake
resources/: bom.txt
resources/docs/: dfrobot_bom.txt
resources/enviroment-test-scripts/: move-forward-1sec.py
resources/environment/: action_tests.txt  request1.json
resources/etc/: actions.yaml  config.0.yaml  config.1.yaml  config.2.yaml  config.yaml
resources/schematic/components/: led.mod
resources/schematic/ryderrobot/: ryderrobot.kicad_prl  ryderrobot.kicad_pro  ryderrobot.kicad_sch
resources/techdrawings/: rr_baseplate.FCStd
resources/training/: training-set.0.json  training-set.1.json  training-set.2.json
scripts/: env-test.py  pi-setup.bash
src/main/: ConfigReader.cpp  ConfigReader.hpp  FileReader.hpp  Layer.cpp  Layer.hpp  Logger.hpp  Network.cpp  Network.hpp  OutputLayer.cpp  OutputLayer.hpp  TrainingSet.cpp  TrainingSet.hpp  agent.cpp  agent.hpp  config.cpp  config.hpp  configyaml.cpp  configyaml.hpp  hidden.hpp  main  main.cpp  main.hpp  nn.cpp  nn.hpp  node.hpp  rr_nn.cpp  rr_nn.hpp  rrutils.hpp
src/main/include/: Logger.hpp  README.md  actions.hpp  attribute.hpp  event.hpp  wiringiface.hpp
src/main/main.dSYM/Contents/Resources/DWARF/: main
src/main/rr-agent/: CMakeLists.txt  TrainingSet.cpp  TrainingSet.hpp  main.cpp  rr_nn.hpp
src/main/rr-environment/: Action.hpp  ActionFactory.cpp  ActionFactory.hpp  CMakeLists.txt  RrController.cpp  RrController.hpp  ipserver.cpp  ipserver.hpp  main.cpp  rr-controller.hpp
src/main/rr-environment/components/: ComponentsCommon.hpp  L298.hpp  L298Left.cpp  L298Left.hpp  L298Motor.cpp  L298Motor.hpp  L298MoveForward.cpp  L298MoveForward.hpp  L298Right.cpp  L298Stop.cpp  L298Stop.hpp  SeeedL298MoveForward.cpp  SeeedL298MoveForward.hpp  SeeedL298Stop.cpp  SeeedL298Stop.hpp
src/main/rr-environment/include/components/: L298Right.hpp  L298Stop.hpp
src/test/: an.cpp  test_agent.cpp  test_hbridge.cpp  test_nn.cpp  test_rr_nn.cpp
